<resources>
    <string name="app_name">nSuns 5/3/1</string>
    <string name="set_up_activity_title">First Settings</string>
    <string name="select_plan">Choose your plan</string>

    <string name="four_day_plan">4 days</string>
    <string name="five_day_plan">5 days</string>
    <string name="six_day_deadlift_plan">6 days Deadlift focused</string>
    <string name="six_day_squat_plan">6 days Squat focused</string>

    <string name="units">Select your preferred units</string>
    <string name="next_button">Next</string>

    <string name="set_personal_max_title">Set your personal max</string>
    <string name="set_personal_max_msg">Set your personal max of these exercises in selected weight units</string>
    <string name="confirm_button">Confirm</string>
    <string name="back_button">Back</string>

    <string name="squat">Squat</string>
    <string name="bench">Bench Press</string>
    <string name="deadlift">Deadlift</string>
    <string name="ohp">Overhead Press</string>
    <string name="cg_bench">Close grip bench press</string>
    <string name="incline_bench">Incline bench press</string>
    <string name="sumo">Sumo deadlift</string>
    <string name="front_squat">Front squat</string>

    <string name="benc_ohp_as">Assistance: Chest, Arms, Back</string>
    <string name="squat_sumo_as">Assistance: Legs, Abs</string>
    <string name="bench_cg_bench_as">Assistance: Arms, Other</string>
    <string name="deadlift_front_as">Assistance: Back, Abs</string>
    <string name="ohp_incline_as">Assistance: Shoulders, Chest</string>
    <string name="sixth_day_as">Assistance: Upper Back, Legs</string>

    <string name="saving_weights">Selected weights have been saved</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit weights</string>
    <string name="enter_weights_dialog">Enter your new training max</string>
    <string name="one_plus_set_text">How much you will increase your TM each week is based on how you perform in the 1+ set each day.\nIf you get 0-1 reps, do not increase your TM.\n2-3 increase by 2.5kg or 5lbs.\n4-5 increase by 2.5-5kg or 5-10lbs.\nMore than 5 reps increase by 5-7.5kg or 10-15lbs.</string>

    <string name="plans_units">Plans and units</string>

    <string name="closing_application">Closing application</string>
    <string name="closing_question">Are you sure you want to close nSuns 5/3/1?</string>


    <string name="language">Language</string>
    <string name="choose_language">Choose your preferred language</string>

    <string name="training_max_history">Training Max History</string>
    
    <string name="add_weight">Add Weight</string>
    <string name="your_weights">Your Weights</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="enter_your_weight_text">Enter your weight in units you selected</string>
    <string name="weight">Weight</string>



</resources>