<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_fitness_center_24"
        app:title="@string/plans_units">


        <ListPreference
            app:defaultValue=""
            app:entries="@array/plan_entries"
            app:entryValues="@array/plan_values"
            app:key="plan"
            app:title="@string/select_plan"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:key="units"
            app:title="@string/units"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/ic_baseline_language_24"
        app:title="@string/language">

        <ListPreference

            app:entries="@array/language_entires"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/choose_language"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>